--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/wants-market?&serverTimezone=UTC&autoReconnect=true&allow&MultiQueries=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=gkgkghgh12
-logging.level.org.hibernate.type=trace
+spring.datasource.password=
+spring.datasource.mapper-locations=classpath:/mapper/*.xml
 
