--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=gkgkghgh12
 
 mybatis.config=mybatis-config.xml
-spring.datasource.mapper-locations=classpath:mapper/mybatis-config.xml
-
+spring.datasource.mapper-locations=classpath:mapper/*.xml
