feat #8 : 레디스 session storage 연동 - redis, redis session 의존성 추가 - redis session을 위한 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=gkgkghgh12
 
 mybatis.config=mybatis-config.xml
 spring.datasource.mapper-locations=classpath:mapper/*.xml
+
+spring.redis.host=localhost
+spring.redis.port=6379
