feat #19 : 거래 게시판 구현 기능, 채팅 기능 구현, 좋아요 기능 구현, 리뷰 기능 구현 - post 엔티티 모델링 - 카테고리, 거래 상태를 enum 타입으로 모델링 - 거래 게시판 조회, 등록, 수정, 삭제 기능 구현 - 유저가 인증한 지역의 글의 목록 조회 - 유저가 인증한 지역의 글의 목록과 카테고리별로 페이징 조회 - 채팅 기능 구현을 위한 chat, chatroom, block 엔티티 모델링 - 게시물 기반 유니크 채팅방 구현 - 게스트나 호스트 중 한명이라도 차단 상태면 채팅 차단 - 유니크 아이디를 통한 채팅방 식별 강화 - 이전 및 최신 채팅 기록 조회 기능 구현 - 리뷰 기능 구현을 위한 Review 엔티티 모델링 - 사용자 리뷰 등록 시 호스트의 매너온도 0.1 상승 구현 - 리뷰 항목 "good manner", "goods good" 등 Enum 타입으로 정의 - 다른 사용자의 리뷰 조회 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/wants-market?&serverTimez
 spring.datasource.username=root
 spring.datasource.password=gkgkghgh12
 
+mybatis.type-handlers-package=com.wants.market.core.handlers
+
 mybatis.config=mybatis-config.xml
 spring.datasource.mapper-locations=classpath:mapper/*.xml
 
